--- a/angular.html
+++ b/angular.html
@@ -13,16 +13,17 @@
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <a href="">link to my repo</a>
                 <a href="/file">go here to see how you can write a file to the server</a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 id="page-title">hi angular</h1>
+                <h1 id="page-title">Sup, Dr. Cumbie!</h1>
                 <input ng-model="user.name">
-                <h3 id="user-greeting">and hi there, {{ user.name }}</h3>
-                <p id="user-car">A {{ user.car }}? Noice.</p>
+                <h3 id="user-greeting">it's, {{ user.name }}, again.</h3>
+                <p id="user-github">Did you know my user on GitHub is {{ user.github }}?<br> Or that the code for this web app can be found at <a href="">{{ user.repo }}</a></p>
+                <p id="user-app">Also, I have this app hosted at <a href="https://harrison-heroku.herokuapp.com/">{{ user.app }}</a></p>
+                <p id="user-skills">Oh, and Check out all my skills: <br> {{ user.skills }}</p>
             </div>
         </div>
     </div>
