--- a/angular.html
+++ b/angular.html
@@ -23,7 +23,7 @@
                 <h3 id="user-greeting">it's, {{ user.name }}, again.</h3>
                 <p id="user-github">Did you know my user on GitHub is {{ user.github }}?<br> Or that the code for this web app can be found at <a href="https://github.com/CatalyticWeb/harrison-heroku">{{ user.repo }}?</a></p>
                 <p id="user-app">Also, I have this app hosted at <a href="https://harrison-heroku.herokuapp.com/">{{ user.app }}.</a></p>
-                <p id="user-skills">Oh, and Check out all my skills: <br> {{ user.skills }}></p>
+                <p id="user-skills">Oh, and Check out all my skills: <br> {{ user.skills }}</p>
             </div>
         </div>
     </div>
