found the problem, probably

--- a/angular.html
+++ b/angular.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
-<body ng-app="Dev Qualifying Exam App">
+<body ng-app="Dev-Qualifying-Exam">
     <div class="container-fluid" ng-controller="MainController">
         <div class="row">
             <div class="col-md-8 offset-md-2">
@@ -29,7 +29,7 @@
     </div>
 
     <script>
-        window.app = angular.module('hi-angular', []);
+        window.app = angular.module('Dev-Qualifying-Exam', []);
         app.controller('MainController', function($scope, $http) {
             $scope.user = null;
 
